# ssc_lua

./: .gitignore  .gitmodules  LICENSE  meson.build  meson_options.txt  readme.md
dependencies/: prepare_dependencies.sh
example/src/: ssc_lua_example.c
example/src/ssc_lua/: example.lua  ssc_lua_example.c
include/ssc_lua/: ssc_lua.h
script/lua/: lua_to_c_string.lua
src/ssc_lua/: log.h  lpack.c  lpack.h  lua_api.h  lua_api.lua  lua_fibers.c  lua_fibers.h  ssc_lua.c
test/src/ssc_lua/: basic_test.c  basic_test.h  cmocka_pre.h  queue_match_test.lua  test_params.c  test_params.h  tests_main.c
