option(
    'pic_statlibs',
     type        : 'boolean',
     value       : false,
     description : 'Compile static libraries with -fPIC (pos independent)'
     )
option(
    'sharedlib',
     type        : 'boolean',
     value       : false,
     description : 'compile as shared libraries'
     )
option(
    'install_luajit',
     type        : 'boolean',
     value       : false,
     description : 'installs the in-project compiled LuaJIT version'
     )